[tool.poetry]
name = "yt-dowloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yt_dowloader"}]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^12.1.2"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
